# LULC-Transfer-Learning

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt
ansible/: ansible.cfg  inventory.ini  playbook.yaml
ansible/configs/: config-1.yaml  config-100.yaml  config-42.yaml
configs/: config.yaml
notebooks/: Potsdam_DeepLabV3+_ResNet50_RandomInit_Adam_mIoU.ipynb  test.ipynb
scripts/: evaluate_model.py  process_potsdam.py  test_model.py  train_model.py
src/transferlearning.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/transferlearning/datasets/: base_dataset.py  potsdam.py  registry.py  vaihingen.py
src/transferlearning/models/: segmentation_model.py
src/transferlearning/models/backbones/: efficientnet.py  mambavision.py  registry.py  resnet.py  swint.py  vit.py  vmamba.py
src/transferlearning/models/decoders/: deeplabv3.py  registry.py  unet.py
src/transferlearning/trainers/: segmentation_trainer.py
src/transferlearning/utils/: losses.py  metrics.py  visualization.py
