[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transferlearning"
version = "1.0.0"
description = "LULC Segmentation with Transfer Learning"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
include = ["transferlearning*"]
